Revision history for {{$dist->name}}

{{$NEXT}}

0.50      2019-11-11 16:25:09 -0700
  - Merge Module::Build::FFI::Rust from FFI-Platypus-Lang-Rust

0.49      2019-01-14 20:16:37 -0500
  - Merge Module::Build::FFI::Pascal from FFI-Platypus-Lang-Pascal
    into this dist

0.48      2018-06-24 00:12:42 -0400
  - Update ffi_dylib for darwin

0.47      2017-07-26 07:41:06 -0400
  - Migrate from File::ShareDir to File::ShareDir::Dist

0.46      2017-03-23 15:47:20 -0400
  - split off from FFI::Platypus 0.45