@@ -20,3 +20,4 @@ cpan = 1
 
 [=inc::My::HeaderVersion]
 
+[Deprecated]
