@@ -11,7 +11,7 @@ use Text::ParseWords     ();
 use Config;
 use base qw( Module::Build );
 
-# ABSTRACT: Build Perl extensions in C with FFI
+# ABSTRACT: (Deprecated) Build Perl extensions in C with FFI
 # VERSION
 
 =head1 SYNOPSIS
@@ -59,6 +59,9 @@ Finally, use it from your perl script or module:
  Foo::Bar::hello_world();  # prints "hello world\n"
 
 =head1 DESCRIPTION
+
+B<Note>: This module is deprecated, please see L<FFI::Build> for another
+way to bundle C/C++ code with your Perl distribution.
 
 Module::Build variant for writing Perl extensions in C and FFI (sans XS).
 
